--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "get-stream": "^9.0.1",
     "multer": "^1.4.5-lts.1",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "puppeteer": "^24.15.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
